--- a/app/views/communities/sections/background/population/_population_employment.html.haml
+++ b/app/views/communities/sections/background/population/_population_employment.html.haml
@@ -6,10 +6,6 @@
     title: "Employment and Unemployment Insurance Claimants Over Time",
     xtitle: "Year",
     ytitle: "Residents",
-    thousands: ",",
     colors: ["#1f77b4", "#ff7f0e"],
-    legend: true,
-    empty: "No Employment Data Available",
-    loading: "Empolyment Data Loading...",
-    download: {background: "#ffffff", filename: "#{@community.name}_monthly_production_chart", format: "png"}
+    download: {filename: "#{@community.name}_monthly_production_chart"}
 
