--- a/app/views/communities/sections/background/population/_population_gender_pie.html.haml
+++ b/app/views/communities/sections/background/population/_population_gender_pie.html.haml
@@ -3,8 +3,4 @@
   title: "Gender Distribution",
   donut: true,
   colors: ["#4e79a7", "#f28e2b"],
-  thousands: ",",
-  legend: true,
-  empty: "No Data Available",
-  loading: "Data Loading...",
-  download: {background: "#ffffff", filename: "#{@community.name}age_group_estimates_with_moe_data", format: "png"}
+  download: { filename: "#{@community.name}age_group_estimates_with_moe_data"}
