--- a/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
@@ -4,7 +4,4 @@
   xtitle: 'Month', 
   ytitle: 'Net Generation (MWh)', 
   suffix: ' MWh',
-  thousands: ',',
-  empty: 'No Monthly Generation Data Available',
-  loading: 'Loading Monthly Generation Data...',
-  download: {background: '#ffffff', filename: chart_title.parameterize, format: 'png'}
+  download: {filename: chart_title.parameterize}
