--- a/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
@@ -2,9 +2,6 @@
 = pie_chart production_yearly_community_charts_path(@community),
   title: chart_title,
   suffix: " MWh",
-  thousands: ",",
   donut: true,
-  empty: "No Yearly Generation Data Available",
-  loading: "Loading Yearly Generation Data...",
-  library: { animation: { duration: 500 }, tooltip: { pointFormat: '{point.name}: <b>{point.y} MWh</b>' }, plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } }   },
-  download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }
+  library: { plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } } },
+  download: { filename: chart_title.parameterize}
