--- a/app/views/communities/sections/electricity/sales/_average_rates.html.haml
+++ b/app/views/communities/sections/electricity/sales/_average_rates.html.haml
@@ -4,4 +4,4 @@
     = column_chart average_sales_rates_community_charts_path(@community),
       suffix: ' $/MWh',
       title: chart_title,
-      download: { background: '#ffffff', filename: chart_title.parameterize, format: 'png' }
+      download: { filename: chart_title.parameterize}
