--- a/app/views/communities/sections/fuel_prices/_chart.html.haml
+++ b/app/views/communities/sections/fuel_prices/_chart.html.haml
@@ -4,7 +4,6 @@
     xtitle:      "Year & Season",
     ytitle:      "Price (USD)",
     prefix:      "$",
-    legend:      true,
     library:     { plotOptions: { series: { marker: { enabled: true } } }}, 
     download:    {filename: "#{@community.name.parameterize}_fuel_prices", format:   "png"}
 
@@ -14,4 +13,4 @@
     xtitle:    "Year",
     ytitle:    "Price (USD)",
     prefix:    "$",
-    download:  { filename: "fuel_by_season", format: "png" }
+    download:  { filename: "fuel_by_season" }
