Add correct link to partners section

--- a/app/views/static_pages/_discover_more.html.haml
+++ b/app/views/static_pages/_discover_more.html.haml
@@ -20,7 +20,7 @@
           Meet the Team Behind AEDG's Revitalization
         %p.text-muted Get to know the experts committed to improving energy data access.
         %p.mb-5
-          = link_to user_guide_path(anchor:'partners'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+          = link_to about_path(anchor:'partners'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
             %span Meet
             %i.bi.bi-arrow-right
     .col-md-4
