Remove unused partials and routes

--- a/app/views/metadata/show.html.haml
+++ b/app/views/metadata/show.html.haml
@@ -1,5 +1,5 @@
 .container-fluid
-  .row.g-5
+  .row
     .col-md-3
       .d-grid.gap-3
         = link_to download_metadatum_path(@metadatum), target: '_blank', class: 'btn btn-primary' do 
