--- a/app/assets/stylesheets/variable-overrides.scss
+++ b/app/assets/stylesheets/variable-overrides.scss
@@ -20,3 +20,10 @@ $faq-accordion-bg: #f8f9fa;
 $faq-accordion-text: #212529;
 $faq-category-active-bg: #0F1F4B;
 $faq-category-inactive-bg: #dfe1e7;
+
+// nav-tabs
+$tabs-text-default: #212529;
+$tabs-text-active: #0d6efd;
+$tabs-text-hover: #0a58ca;
+$tabs-border-hover: #dee2e6;
+$tabs-border-active: #0d6efd;
