--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -9,7 +9,7 @@
             %h4.fw-4= @borough.name
 
         .d-grid.gap-2
-          %button.btn.btn-primary
+          %button.btn.btn-aedg-primary
             %i.bi.bi-download
             Download/Print
 
