--- a/app/views/static_pages/_citing_aedg.html.haml
+++ b/app/views/static_pages/_citing_aedg.html.haml
@@ -2,10 +2,12 @@
   %h5.text-muted.mb-3 Citation
   %h2.fw-bold.mb-4 How to Cite AEDG
   %p.text-muted
-    Use the reference below to cite the Alaska Energy Data Gateway (AEDG) as a whole.
+    Copy the reference below to cite the Alaska Energy Data Gateway (AEDG) as a whole.
 
   = render "shared/citation_block", citation: aedg_citation
 
   %h5.fw-bold.mt-5 Need to cite a specific dataset?
   %p.text-muted
-    You can find the preferred citation for each dataset under the “Cite” tab on its page.
+  You can find a citation on each dataset’s page under the 
+  %b Cite
+  tab.
