--- a/app/views/metadata/tabs/_metadata.html.haml
+++ b/app/views/metadata/tabs/_metadata.html.haml
@@ -1,5 +1,22 @@
 .mb-3
-  %h3 Metadata
-  %pre 
-    = JSON.pretty_generate(metadatum.data)
- 
+  %h3.mb-4.fs-4 Metadata
+  %p.text-muted
+    This dataset uses the 
+    = link_to 'Open Energy Metadata (OEMetadata)', 'https://openenergyplatform.github.io/oemetadata/latest/', target: '_blank'
+    standard.
+    %h4.fs-6.mt-4 Want to know more about the metadata process?
+    %p
+      = link_to user_guide_path(anchor: 'faq'), class: 'text-decoration-none icon-link icon-link-hover align-items-baseline' do
+        %span Learn more about the Metadata
+        %i.bi.bi-arrow-right
+  .border.rounded.bg-light-subtle.p-4.d-flex.flex-column.flex-md-row.align-items-start.justify-content-between.gap-3{'data-controller' => 'copy'}
+
+    / Button: first on small screens, last on md+, right-aligned when stacked
+    %button.btn.btn-outline-secondary.btn-sm.d-inline-flex.order-0.order-md-1.ms-auto.ms-md-3.align-self-start{'data-action' => 'click->copy#copy', 'data-copy-target' => 'button'}
+      %i.bi.bi-clipboard.me-1{'data-copy-target' => 'icon'}
+      %span{'data-copy-target' => 'label'} Copy
+
+    / Pre: second on small screens, first on md+
+    %pre.mb-0.flex-grow-1.w-100.overflow-auto.order-1.order-md-0(style="word-break: break-word;")
+      %code.d-block{'data-copy-target' => 'source'}= JSON.pretty_generate(metadatum.data)
+  
