Change Alaskan to Alaska AEDG-457

--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -18,7 +18,7 @@
           %i.bi.bi-database-fill.fs-2
         %h5.fw-semibold View & Download Datasets
         %hr
-        %p.text-muted Dive into Alaskan energy data to uncover trends, inform decisions, and power your insights
+        %p.text-muted Dive into Alaska energy data to uncover trends, inform decisions, and power your insights
 
     .col-md-4.d-flex
       = link_to communities_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
