AEDG-450 Fix links

--- a/app/views/static_pages/_discover_more.html.haml
+++ b/app/views/static_pages/_discover_more.html.haml
@@ -9,7 +9,7 @@
           Get to know the Alaska Energy Data Gateway
         %p.text-muted Understand the methodologies behind our comprehensive data collection.
         %p.mb-5
-          = link_to user_guide_path(anchor:'data-creation-process'), class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+          = link_to user_guide_path(anchor:'data-creation-process'), data: { turbo: false }, class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
             %span Learn
             %i.bi.bi-arrow-right
 
