--- a/app/views/static_pages/_whats_new.html.haml
+++ b/app/views/static_pages/_whats_new.html.haml
@@ -36,6 +36,6 @@
           Gain energy insights
         %p.text-muted Discover user-friendly tools designed to enhance your data exploration experience.
         %p.mb-5
-          = link_to user_guide_path, class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
+          = link_to communities_path, class: 'text-decoration-none fs-5 ms-1 icon-link icon-link-hover d-inline-flex align-items-baseline' do
             %span Explore
             %i.bi.bi-arrow-right
