--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -1,22 +1,32 @@
-.container
-  .row.mb-3.justify-content-center
-    .col-lg-10
-      .card.p-3
-        %h1.text-center Explore Data
-
-        .card-body
-          .d-flex.justify-content-center.gap-4.mb-3
-            = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-aedg-primary"
-            = link_to "View All Datasets", search_metadata_path, class: "btn btn-lg btn-aedg-secondary"
-
+.container-xl
+  .row.justify-content-center.mb-5
+    .col
+      #explore-data-hero.position-relative.text-center.rounded-4.p-0.p-md-3.p-lg-5
+        .container-fluid
           .row.justify-content-center
-            .col
-              = render 'search_form', simple: true
-  .d-grid.g-2.mb-3
-    = render 'by_topic'
-  .row
-    .col-lg-6.text-center
-      %p.hero PLACEHOLDER FOR MAP
+            .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow
+              %h1.fw-bold.m-3
+                %i.bi.bi-search.me-2
+                Explore Data
+  
+              %p.lead.fs-5.w-75.mx-auto.mb-4
+                Explore energy and socioeconomic datasets from across Alaska. Built to support researchers, policymakers, and the public.
+
+              .d-flex.flex-column.flex-sm-row.justify-content-center.align-items-center.gap-3.mb-4
+                = link_to "#{Community.count} Communities", communities_path, class: "btn btn-lg btn-aedg-primary"
+                = link_to "View All Datasets", search_metadata_path, class: "btn btn-lg btn-aedg-secondary"
+
+              .row.justify-content-center
+                .col.col-lg-10
+                  = render 'search_form', simple: true
+      .text-end.text-small.text-muted.mt-2
+        Photo Credit: Gwen Holdmann
+
+  .row.g-5.mb-5
     .col-lg-6
-      %h2 Featured Datasets
+      %h3.fw-semibold.mb-4 Datasets by Theme
+      = render 'by_topic'
+
+    .col-lg-6
+      %h3.fw-semibold.mb-4 Featured Datasets
       = render partial: 'metadata', collection: @highlighted, as: :metadatum
