Update community summary dropdown cards to match data explorer, fix x overflow

--- a/app/views/metadata/show.html.haml
+++ b/app/views/metadata/show.html.haml
@@ -25,7 +25,7 @@
           - elsif @dataset.format.downcase == 'geojson'
             %i.bi.bi-filetype-geojson.me-1
           - else
-            %i.bi.bi-filetype-text.me-1
+            %i.bi.bi-file-earmark-arrow-down.me-1
           Download Data
   / Navigation Tabs
   .nav.nav-tabs
