--- a/app/views/communities/index.html.haml
+++ b/app/views/communities/index.html.haml
@@ -1,8 +1,17 @@
-.container
-  .card.text-center
-    .card-body.p-5
-      %h1.fw-bold Community Summaries
-      %p.lead.w-75.mx-auto
-        The Community Summary feature provides key insights into communities, covering geography, population and employment, fuel prices, electric rates, and more.
-      %br
-      = render partial: "dropdown", locals: { communities: @communities, current_community: nil }
+.container-xl
+  .row.justify-content-center.mb-5
+    .col
+      #community-data-hero.position-relative.text-center.rounded-4.p-0.p-md-3.p-lg-5
+        .container-fluid
+          .row.justify-content-center
+            .col-12.col-md-11.col-lg-10.bg-white.bg-opacity-75.p-4.rounded-4.shadow
+              %h1.fw-bold.m-3
+                %i.bi.bi-house-fill.me-2
+                Community Summaries
+  
+              %p.lead.fs-5.w-75.mx-auto
+                The Community Summary feature provides key insights into communities, covering geography, population and employment, fuel prices, electric rates, and more.
+              %br
+              .row.justify-content-center
+                .col.col-lg-10
+                  = render partial: "dropdown", locals: { communities: @communities, current_community: nil }
