--- a/app/views/metadata/index.html.haml
+++ b/app/views/metadata/index.html.haml
@@ -22,7 +22,7 @@
       .text-end.text-small.text-muted.mt-2
         Photo Credit: Gwen Holdmann
 
-  .row.g-5.mb-5
+  .row.g-5.mb-5.mx-0
     .col-lg-6
       %h3.fw-semibold.mb-4 Datasets by Theme
       = render 'by_topic'
