--- a/app/views/metadata/tabs/_metadata.html.haml
+++ b/app/views/metadata/tabs/_metadata.html.haml
@@ -1,14 +1,8 @@
 .mb-3
   %h3.mb-4.fs-4 Metadata
   %p.text-muted
-    This dataset uses the 
-    = link_to 'Open Energy Metadata (OEMetadata)', 'https://openenergyplatform.github.io/oemetadata/latest/', target: '_blank'
-    standard.
-    %h4.fs-6.mt-4 Want to know more about the metadata process?
-    %p
-      = link_to user_guide_path(anchor: 'faq'), class: 'text-decoration-none icon-link icon-link-hover align-items-baseline' do
-        %span Learn more about the Metadata
-        %i.bi.bi-arrow-right
+    This dataset uses the OEMetadata standard,
+    = link_to 'learn more.', 'https://acep-aedg.github.io/aedg-metadata/oemetadata.html', target: '_blank'
   .border.rounded.bg-light-subtle.p-4.d-flex.flex-column.flex-md-row.align-items-start.justify-content-between.gap-3{'data-controller' => 'copy'}
 
     / Button: first on small screens, last on md+, right-aligned when stacked
