--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -9,9 +9,9 @@
             %h4.fw-4= @borough.name
 
         .d-grid.gap-2
-          %button.btn.btn-primary
-            %i.bi.bi-download
-            Download/Print
+          -# %button.btn.btn-primary
+          -#   %i.bi.bi-download
+          -#   Download/Print
 
           = link_to communities_path, class: 'btn btn-secondary' do 
             %i.bi.bi-arrow-left
