--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -9,6 +9,7 @@
             %h4.fw-4= @borough.name
 
         .d-grid.gap-2
+          -# TODO: Uncomment when the download/print functionality is implemented
           -# %button.btn.btn-primary
           -#   %i.bi.bi-download
           -#   Download/Print
